--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "effective:circle:config": "circleci config process circle.yml | sed /^#/d"
   },
   "dependencies": {
-    "http-server": "0.11.1",
     "director": "1.2.8",
+    "http-server": "0.11.1",
     "react": "0.13.3",
     "todomvc-app-css": "2.1.2",
-    "todomvc-common": "cypress-io/todomvc-common#88b7c6359ad4a5097312d8b2a21dd539ce9f4446"
+    "todomvc-common": "github:cypress-io/todomvc-common#88b7c6359ad4a5097312d8b2a21dd539ce9f4446"
   },
   "devDependencies": {
     "cypress": "3.1.4",
